# merge-gate

./: .gitignore  FRICTION_LOG.md  README.md  pyproject.toml
integration/: .mcp.json  CLAUDE.md.snippet  PR_BODY_TEMPLATE.md  niteshift-setup.sh.snippet
src/merge_gate/: __init__.py  diff.py  judge.py  rubric.py  schema.py  server.py  tests_runner.py
tests/: test_gate.py
