[project]
name = "merge-gate"
version = "0.1.0"
description = "A merge-readiness gate exposed as an MCP tool: runs targeted tests + a rubric judge over a branch diff and returns a grounded pass/fail verdict."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2",
    "instructor>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.7",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0", "jsonref>=1.1"]  # judge provider: JUDGE_PROVIDER=gemini
dev = ["pytest>=8.0"]           # run merge-gate's own suite

[project.scripts]
merge-gate = "merge_gate.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/merge_gate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Suite is function-based; don't collect the TestResult schema model as a test class.
python_classes = []
